# newsletter-herald

backend/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/db/: models.py  setup.py
backend/helpers/: auth.py  constants.py  key_utils.py  text_utils.py
backend/llm/: providers.py
backend/scripts/: create_tables.py
